# experiment-skbuild-wrapper

./: README.md
.github/workflows/: test.yaml
base/: CMakeLists.txt  pyproject.toml
base/cmake/: baseConfig.cmake.in
base/src/: CMakeLists.txt  base.cpp
my_pkg/: CMakeLists.txt  pyproject.toml
my_pkg/cmake/: mainConfig.cmake.in
my_pkg/python/: CMakeLists.txt  _run_mod.cpp  _run_wrapper.py.in
my_pkg/python/bindings/: CMakeLists.txt
my_pkg/python/my_pkg/: __init__.py  __main__.py  _run_mod.pyi
my_pkg/src/: main.cpp
