[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name = "my_pkg_base"
version = "0.0.0"

[project.entry-points."cmake.root"]
base = "base"

[tool.scikit-build]
cmake.source-dir = "."
wheel.install-dir = "base"
cmake.build-type = "Release"

[[tool.scikit-build.overrides]]
if.from-sdist = false
build-dir = "cmake-build-scikit"

[tool.cibuildwheel]
build = "cp312-*"
