[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name = "my_pkg"
version = "0.0.0"
dependencies = ["my_pkg_base"]

# scikit-build-core auto-generate these
[project.scripts]
main = "my_pkg._run_main:run"

[tool.scikit-build]
cmake.source-dir = "python"
wheel.install-dir = "my_pkg"

[[tool.scikit-build.overrides]]
if.from-sdist = false
build-dir = "cmake-build-scikit"
build.requires = ["my_pkg_base @ {root:parent:uri}/base"]
