[build-system]
requires = ["scikit-build-core>=0.11", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "my_pkg"
version = "0.0.0"
dependencies = ["my_pkg_base"]

# scikit-build-core auto-generate these
[project.scripts]
main = "my_pkg._run_main:run"

[tool.scikit-build]
cmake.source-dir = "python"
wheel.install-dir = "my_pkg"
cmake.build-type = "Release"

[[tool.scikit-build.overrides]]
if.from-sdist = false
build-dir = "cmake-build-scikit"
build.requires = ["my_pkg_base @ {root:parent:uri}/base"]

[tool.cibuildwheel]
build = "cp311-*"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
